# dspy

./: llms.txt
dspy-core/: pyproject.toml
dspy-core/dspy_core/: __init__.py
dspy-core/dspy_core/adapters/: __init__.py  baml_adapter.py  base.py  chat_adapter.py  json_adapter.py  utils.py  xml_adapter.py
dspy-core/dspy_core/adapters/types/: __init__.py  audio.py  base_type.py  citation.py  code.py  document.py  file.py  history.py  image.py  reasoning.py  tool.py
dspy-core/dspy_core/experimental/: __init__.py
dspy-core/dspy_core/primitives/: __init__.py  example.py  prediction.py
dspy-core/dspy_core/signatures/: __init__.py  signature.py
dspy-core/dspy_core/utils/: __init__.py  callback.py  exceptions.py
dspy-core/tests/: conftest.py
dspy-core/tests/adapters/: test_adapter_utils.py  test_audio.py  test_baml_adapter.py  test_base_type.py  test_chat_adapter.py  test_citation.py  test_code.py  test_document.py  test_json_adapter.py  test_reasoning.py  test_tool.py  test_xml_adapter.py
dspy-core/tests/primitives/: test_example.py
dspy-core/tests/signatures/: test_adapter_file.py  test_adapter_image.py  test_custom_types.py  test_signature.py
dspy/adapters/: base.py
dspy/utils/: callback.py
notes/: core-concepts.md  evaluation-primitives.md  optimizers.md  predict-modules.md  retrievers-tools-utils.md  rlms.md
