[build-system]
requires = ["setuptools>=77.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "dspy-core"
version = "0.1.0"
description = "Core signature and adapter logic extracted from DSPy"
readme = "README.md"
authors = [{ name = "Omar Khattab", email = "okhattab@stanford.edu" }]
license = {file = "LICENSE"}
requires-python = ">=3.10, <3.15"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pydantic>=2.0",
    "json-repair>=0.54.2",
    "regex>=2023.10.3",
    "requests>=2.31.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.3.0",
]

[project.urls]
homepage = "https://github.com/stanfordnlp/dspy"

[tool.setuptools.packages.find]
where = ["."]
include = ["dspy_core", "dspy_core.*"]
exclude = ["tests", "tests.*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
include = ["dspy_core/**/*.py", "tests/**/*.py"]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP", "N", "RUF", "Q"]
ignore = [
    "B027", "FBT003", "C901", "E501", "UP035", "RUF005", "B904",
    "F403", "E721", "UP031", "RUF022",
]
fixable = ["ALL"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "TID252", "ARG001"]
"__init__.py" = ["F401"]
